# Nand2Tetris-VM-Translator

./: BasicLoop.asm  Cargo.toml  FibonacciElement.asm  README.md  StackTest.asm  lICENSE
src/: main.rs  utils.rs
src/lib/: error.rs  lib.rs
src/lib/generation/: gen_arithmetic.rs  gen_bootstrap.rs  gen_branching.rs  gen_function.rs  gen_logical.rs  gen_memory.rs  mod.rs
src/lib/generation/templates/: bootstrap.hbs
src/lib/generation/templates/arithmetic/: add.hbs  add.template  neg.hbs  neg.template  sub.hbs  sub.template
src/lib/generation/templates/branching/: goto.hbs  if-goto.hbs  label.hbs
src/lib/generation/templates/function/: call.hbs  definition.hbs  return.hbs
src/lib/generation/templates/logical/: and.hbs  and.template  eq.hbs  eq.template  gt.hbs  lt.hbs  not.hbs  not.template  or.hbs
src/lib/generation/templates/memory/pop/: normal.hbs  normal.template  pointer0.hbs  pointer1.hbs  pointer1.template  static.hbs  static.template  temp.hbs
src/lib/generation/templates/memory/push/: constant.hbs  constant.template  normal.hbs  normal.template  pointer0.hbs  pointer0.template  pointer1.hbs  static.hbs  temp.hbs  temp.template
src/lib/parse/: line_command.rs  memory_segment.rs  mod.rs  parse_arithmetic_logical.rs  parse_branching.rs  parse_error.rs  parse_function.rs  parse_memory.rs  parsed_line.rs
