[package]
name = "vm_translator"
version = "0.1.0"
edition = "2021"

[lib]
name = "translator_lib"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
handlebars = "6.1.0"
lazy_static = "1.5.0"
random-string = "1.1.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
