[package]
name = "vm_translator"
version = "1.0.1"
edition = "2021"

[lib]
name = "translator_lib"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.5.17", features = ["cargo", "derive"] }
colored = "2.1.0"
handlebars = { version = "6.1.0", features = ["rust-embed"] }
log = { version = "0.4.22" }
regex = "1.10.6"
rust-embed = "8.5.0"
serde = { version = "1.0.210", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
simple_logger = "5.0.0"
lazy_static = "1.5.0"